// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
<form
  className="ant-form ant-form-horizontal"
  onSubmit={[Function]}
>
  <div
    className="ant-row ant-form-item form-control"
  >
    <div
      className="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        className="ant-form-item-required"
        htmlFor="foo"
        onClick={[Function]}
        title="bar"
      >
        bar
      </label>
    </div>
    <div
      className="ant-col ant-col-18 ant-form-item-control-wrapper"
    >
      <div
        className="ant-form-item-control has-feedback has-success"
      >
        <span
          className="ant-form-item-children"
        >
          <input
            className="ant-input"
            data-__field={
              Object {
                "name": "foo",
              }
            }
            data-__meta={
              Object {
                "initialValue": "text",
                "name": "foo",
                "originalProps": Object {
                  "disabled": false,
                  "type": "text",
                },
                "ref": null,
                "rules": Array [
                  Object {
                    "message": "必填",
                    "required": true,
                  },
                ],
                "trigger": "onChange",
                "validate": Array [
                  Object {
                    "rules": Array [
                      Object {
                        "message": "必填",
                        "required": true,
                      },
                    ],
                    "trigger": Array [
                      "onBlur",
                    ],
                  },
                ],
                "validateTrigger": "onBlur",
                "valuePropName": "value",
              }
            }
            disabled={false}
            id="foo"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value="text"
          />
          <div>
            plus
          </div>
          <span
            className="ant-form-item-children-icon"
          >
            <i
              aria-label="icon: check-circle"
              className="anticon anticon-check-circle"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="check-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 0 1-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                />
              </svg>
            </i>
          </span>
        </span>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders correctly with necessary props 1`] = `
<form
  className="ant-form ant-form-horizontal"
  onSubmit={[Function]}
>
  <div
    className="ant-row ant-form-item"
  >
    <div
      className="ant-col ant-form-item-control-wrapper"
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <input
            className="ant-input"
            data-__field={
              Object {
                "name": "foo",
              }
            }
            data-__meta={
              Object {
                "initialValue": undefined,
                "name": "foo",
                "originalProps": Object {
                  "disabled": false,
                  "type": "text",
                },
                "ref": null,
                "rules": Array [
                  Object {
                    "message": "必填",
                    "required": true,
                  },
                ],
                "trigger": "onChange",
                "validate": Array [
                  Object {
                    "rules": Array [
                      Object {
                        "message": "必填",
                        "required": true,
                      },
                    ],
                    "trigger": Array [
                      "onChange",
                    ],
                  },
                ],
                "validateTrigger": "onChange",
                "valuePropName": "value",
              }
            }
            disabled={false}
            id="foo"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
  </div>
</form>
`;
